kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-base
  labels:
    app.kubernetes.io/name: microservices
    app.kubernetes.io/part-of: microservices
